Adds html route for wall

--- a/wall.html
+++ b/wall.html
@@ -5,25 +5,45 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Homepage</title>
+	<title>Will's Wall</title>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="/_assets/css/style.css">
 </head>
 <body>
 	<div class="container">
-		<h1>Welcome to Will's Wall!</h1>
+		<h1>Will's Wall</h1>
 
 		<div class="row">
 			<div class="col-md-12">
-				<p>Built on Express.js</p>
-				<p>Write me a note <a href="/wall">here</a></p>
+				<h2>Notes</h2>
 			</div>
 		</div>
+
+		<div class="row">
+			<div class="col-md-12" id="wall">
+				<!-- Notes will go here -->
+			</div>
+		</div>
+
+		<form id="new-note-form" action="/note" method="POST" role="form">
+		
+			<div class="form-group">
+				<label for="name">Name</label>
+				<input type="text" name="name" class="form-control" id="name" placeholder="Your Name">
+			</div>
+
+			<div class="form-group">
+				<label for="msg">Note</label>
+				<textarea name="msg" class="form-control" id="msg" placeholder="Your Note to Will"></textarea>
+			</div>
+
+			<button id="addNote" type="submit" class="btn btn-primary">Submit</button>
+		</form>
 	</div><!-- ./container -->
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<script type="text/javascript" src="/_assets/js/homepage.js"></script>
+	<script type="text/javascript" src="/_assets/js/wall.js"></script>
 </body>
 </html>
